--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@300;400;700&display=swap" rel="stylesheet">
 
 
-    <title>React App</title>
+    <title>Coffee Saver</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
